Added timeline stuff

--- a/timeline.html
+++ b/timeline.html
@@ -15,9 +15,11 @@
     <div class = "timeline">
         <div class = "checkpoint">
             <div>
-                <h2> Date the server was created</h2>
+                <h2> Server Creation</h2>
                 <p>
-                    It was created on this day and
+                    AMOGUS
+                    <br>
+                    <img id="timeline-image1" src = "images\among-us-dance.gif">
                 </p>
             </div>
         </div>
